# DFFC-FundModel

./: .gitignore  161725招商中证白酒指数分级.csv  README.md  SMACrossStrategy.html  backtest_funcinfo.py  backtesting_main.py  bt_main.py  btalgos_main.py  btalgos_mainT+1.py  cmd_main.py  crawler_me.py  dino_strategy_gather.py  dino_strategy_magnatic.py  dino_strategy_single.py  extended_funcinfo.py  fund_config.json  fund_config_dino.json  fund_config_dual_ng.json  fund_config_hlvsst.json  fund_config_inter.json  fund_config_longterm.json  fund_config_longtermtest4.json  fund_config_ndvsgd.json  fund_info.py  gui_main.py  gui_main_new.py  main.py  numpy_reverse.py  oop_note.md  preisach_hysteresis_model.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rick_strategy_reallocation.py  rick_strategy_reallocation_dual_LRStratified.py  rick_strategy_reallocation_multi.py  rick_strategy_satellite.py  rick_strategy_satellite_etf.py  run_tests.py  (+8 more)
csv_data/: 001595.csv  002834.csv  002963.csv  004070.csv  004253.csv  004753.csv  005052.csv  005659.csv  005693.csv  006221.csv  007467.csv  008087.csv  008087test.csv  008163.csv  008299.csv  010365.csv  010989.csv  011320.csv  011613.csv  011937.csv  012414.csv  012538.csv  012553.csv  012857.csv  012997.csv  013360.csv  014118.csv  014415.csv  014674.csv  015016.csv  017102.csv  017437.csv  019736.csv  020423.csv  021143.csv  021418.csv  021483.csv  161815.csv  270042.csv  320016.csv  (+1 more)
dffc/: __init__.py
docs/: REFACTOR_REPORT.md  fund_class_documentation.md  fund_fees_documentation.md  provider_refactoring_summary.md  (+1 more)
(+216 files in other folders)
